# harla_zk

./: .gitignore  Cargo.toml  README.md
src/: api.rs  lib.rs  zk.rs
zokrates/: abi.json  compile_circuit_and_make_setup.sh  legalage.zok  out  proving.key  test.sh  verification.key  verifier.sol
