[package]
name = "harla_zk"
version = "0.1.0"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com>"]
edition = "2018"

[dependencies]
bellman_ce = { version = "^0.3", default-features = false }
bs58 = "0.3.1"
byteorder = "1.3.4"
clap = "2.33.1"
chrono = "0.4.19"
ff_ce = "^0.9"
ff_mimc = {package="ff_ce" , version="0.11", features = ["derive"]}
hex = "0.4.2"
image="0.23.12"
num-bigint="0.3.1"
mimc-rs = { git = "https://github.com/arnaucube/mimc-rs", branch = "master" } 
pairing = { version = "0.18"}
qrcode = "0.12.0"
rand = "0.4"
regex="1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zokrates_core = { git = "https://github.com/sladecek/ZoKrates.git" }
zokrates_field = { git = "https://github.com/sladecek/ZoKrates.git" }


